Rename format_raw to format_values_as_json
